--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.iflytek.vivian</groupId>
-    <artifactId>traffic-server</artifactId>
+    <artifactId>TrafficBroadcastServer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
