--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,11 +25,31 @@ spring.jpa.show-sql=true
 feign.hystrix.enabled=false
 
 #\u80FD\u529B\u5730\u5740
-ability.face.url=http://172.31.99.139:3232
+ability.face.hostUrl=https://api.xf-yun.com/v1/private/s67c9c78c
+ability.face.host=api.xf-yun.com
+ability.face.path=/v1/private/s67c9c78c
+ability.face.appId=60346977
+ability.face.apiKey=61581ff635d25cac9edc3eb101743a7d
+ability.face.apiSecret=6dafbf23712da829593bc7141a202b93
 
-ability.ast.url=ws://172.31.99.139:4567
+ability.ast.hostUrl=wss://iat-api.xfyun.cn/v2/iat
+ability.ast.host=iat-api.xfyun.cn
+ability.ast.path=/v2/iat
+ablity.ast.appId=60346977 
+ability.ast.apiKey=61581ff635d25cac9edc3eb101743a7d
+ability.ast.apiSecret=6dafbf23712da829593bc7141a202b93
 
-ability.tts.url=http://172.31.99.139:9955
+ability.tts.hostUrl=wss://tts-api.xfyun.cn/v2/tts
+ability.tts.host=tts-api.xfyun.cn
+ability.tts.path=/v2/tts
+ability.tts.appId=60346977 
+ability.tts.apiKey=61581ff635d25cac9edc3eb101743a7d
+ability.tts.apiSecret=6dafbf23712da829593bc7141a202b93
+
+
+
+
+
 
 
 spring.http.multipart.maxFileSize=1000Mb
