语音识别能力接口基础实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,11 @@ ablity.ast.appId=60346977
 ability.ast.apiKey=61581ff635d25cac9edc3eb101743a7d
 ability.ast.apiSecret=6dafbf23712da829593bc7141a202b93
 
+ability.iat.hostUrl=wss://iat-api.xfyun.cn/v2/iat
+ablity.iat.appId=60346977 
+ability.iat.apiKey=61581ff635d25cac9edc3eb101743a7d
+ability.iat.apiSecret=6dafbf23712da829593bc7141a202b93
+
 ability.tts.hostUrl=wss://tts-api.xfyun.cn/v2/tts
 ability.tts.host=tts-api.xfyun.cn
 ability.tts.path=/v2/tts
