添加语音识别能力接口dto注释

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ ablity.ast.appId=60346977
 ability.ast.apiKey=61581ff635d25cac9edc3eb101743a7d
 ability.ast.apiSecret=6dafbf23712da829593bc7141a202b93
 
-ability.iat.hostUrl=wss://iat-api.xfyun.cn/v2/iat
+ability.iat.hostUrl=https://iat-api.xfyun.cn/v2/iat
 ablity.iat.appId=60346977 
 ability.iat.apiKey=61581ff635d25cac9edc3eb101743a7d
 ability.iat.apiSecret=6dafbf23712da829593bc7141a202b93
