添加tts能力服务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,18 +44,10 @@ ablity.iat.appId=60346977
 ability.iat.apiKey=61581ff635d25cac9edc3eb101743a7d
 ability.iat.apiSecret=6dafbf23712da829593bc7141a202b93
 
-ability.tts.hostUrl=wss://tts-api.xfyun.cn/v2/tts
-ability.tts.host=tts-api.xfyun.cn
-ability.tts.path=/v2/tts
+ability.tts.hostUrl=https://tts-api.xfyun.cn/v2/tts
 ability.tts.appId=60346977 
 ability.tts.apiKey=61581ff635d25cac9edc3eb101743a7d
 ability.tts.apiSecret=6dafbf23712da829593bc7141a202b93
-
-
-
-
-
-
 
 spring.http.multipart.maxFileSize=1000Mb
 spring.http.multipart.maxRequestSize=1000Mb
