--- a/pom.xml
+++ b/pom.xml
@@ -160,9 +160,15 @@
             <version>1.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+
     </dependencies>
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -171,7 +177,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
-                    <!--lib放的位置-->
+                    &lt;!&ndash;lib放的位置&ndash;&gt;
                     <compilerArguments>
                         <extdirs>${project.basedir}/src/main/resources/lib</extdirs>
                     </compilerArguments>
@@ -213,6 +219,6 @@
 
         </resources>
 
-    </build>
+    </build>-->
 
 </project>
