--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.application.name=traffic-server
 
 #\u6570\u636E\u5E93\u8BBE\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/traffic?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://1.15.78.72:3306/traffic?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.tomcat.max-active=10
