saveUser接口测试bug解决 ①注意实体的AssignData ②启动若端口无法访问。注意数据配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.datasource.tomcat.initialSize=2
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.show-sql=true
