--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.application.name=traffic-server
 
 #\u6570\u636E\u5E93\u8BBE\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://1.15.78.72:3306/traffic?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://1.15.78.72:3306/traffic?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.username=alex
+spring.datasource.password=Alex990818@
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.max-idle=5
 spring.datasource.tomcat.initialSize=2
