新增头像上传接口与图像地址查询接口

--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
 
     </dependencies>
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -177,7 +177,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
-                    <!--lib放的位置-->
+                    &lt;!&ndash;lib放的位置&ndash;&gt;
                     <compilerArguments>
                         <extdirs>${project.basedir}/src/main/resources/lib</extdirs>
                     </compilerArguments>
@@ -218,6 +218,6 @@
 
         </resources>
 
-    </build>
+    </build>-->
 
 </project>
