--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=9997
 server.context-path=/traffic-server
-server.max-http-header-size=2048000
+#server.max-http-header-size=2048000
 
 server.error.whitelabel.enabled = true
 
